Updates after 2024 course
Mostly minor text edits, and reordering some questions on Thursday and Friday

--- a/01_Monday.Rmd
+++ b/01_Monday.Rmd
@@ -84,12 +84,12 @@ All methods you will meet this week are based on similarities or dissimilarities
 
 #### [2.1 How do the metrics differ (conceptually, not a detailed mathematical explanation)?]{style="color:forestgreen"}
 
-#### [2.2 Which metric corresponds to a geographic distance?]{style="color:forestgreen"}
+#### [2.2 Which metric corresponds to a geographic distance]{style="color:forestgreen"}, and which to a species community distance?
 
 ```{r message=FALSE, warning=FALSE}
 # create a triangular data set with 2 columns (x and y) and 3 rows
 #
-dt <- data.frame(x = c(5, 5, 10), y = c(5, 10, 10))
+dt <- data.frame(x = c(5, 5, 10, 0), y = c(5, 10, 10,0))
 #plot dt
 plot(dt, xlim = c(0, 15), ylim = c(0, 15))
 # what does vegdist() do?
@@ -99,8 +99,8 @@ help(vegdist)
 # create some distance matrices with using different metrics
 #
 (dt.bray <- vegdist(dt, method = "bray"))
-(dt.manhattan <- vegdist(dt, method = "manhattan"))
 (dt.euclidean <- vegdist(dt, method = "euclidean"))
+(dt.hellinger <- vegdist(dt, method = "hellinger"))
 
 ```
 
@@ -112,11 +112,11 @@ Compare the plots on the PCA with and without scaling (PCA plot 4) and discuss t
 
 #### [Questions:]{style="color:forestgreen"}
 
-#### [3.1What is the difference between the two plots in "PCA plot 4" ? Which one is best to use?]{style="color:forestgreen"}
+#### [3.1Why is there a difference between the two plots in "PCA plot 4" ? Which one is best to use?]{style="color:forestgreen"}
 
 #### [3.2 Is there any way to see if a PCA plot is based on scaled or unscaled data, just by looking at the plot?]{style="color:forestgreen"}
 
-#### [3.3 What is the difference between the plots in plot 5? Which one is best to use?]{style="color:forestgreen"}
+#### [3.3 Why is there a difference between the plots in plot 5? Which one is best to use?]{style="color:forestgreen"}
 
 First we load the Dune vegetation data we will use and clean it up a little.
 
@@ -244,7 +244,11 @@ lines(coords, col="blue")
 
 #### [Question:]{style="color:forestgreen"}
 
-#### [5.1 Give a conceptual description on why objects/samples and descriptors/species to the left differ from objects and descriptors to the right, and those at the bottom from those at the top! (Plant ecologists may give a more detailed description, using their knowledge about the species in the dataset).]{style="color:forestgreen"}
+#### [5.1 Give a conceptual description of why objects/samples and descriptors/species to the left differ from objects and descriptors to the right, and those at the bottom from those at the top!]{style="color:forestgreen"}
+
+#### [5.2 Can you see an edge effect (a mathematical artifact that compresses the samples at one or both ends of a gradient)?]{style="color:forestgreen"}
+
+#### [5.3 Can you see an arch effect?]{style="color:forestgreen"}
 
 ```{r, warning=FALSE, message=FALSE}
 dune.ca <- ca(dune)
@@ -259,7 +263,9 @@ summary(eigenvals(dune.ca)) #proportion variance explained
 
 #### [Question:]{style="color:forestgreen"}
 
-#### [6.1 Look at the eigenvalues, the length of gradient, the total variation and the ordination diagram. Explain the differences between results from CA and DCA.]{style="color:forestgreen"}
+#### [6.1 If you found artifacts in the CA in question 5, did the detrending remove them?]{style="color:forestgreen"}
+
+#### [6.2 Look at the eigenvalues, the length of gradient, the total variation and the ordination diagram. Explain the differences between results from CA and DCA.]{style="color:forestgreen"}
 
 Note that we do not get "variation explained" in the R implementation of DCA (and some other functions). The developer of the vegan package explains: "*The total amount of variation is undefined in detrended correspondence analysis and therefore proportions from total are unknown and undefined. DCA is not a method for decomposition of variation, and therefore these proportions would not make sense either.*"
 
